# SmartMealSystem

./: .encoding_profile  .gitignore  BUGFIX_SUMMARY.md  CHECKLIST.md  CMakeLists.txt  COMMIT_MESSAGE.txt  DEPLOYMENT.md  Dockerfile  FIXES.md  FIX_DETAILS.md  IMPROVEMENTS.md  INSTALLATION.txt  MealRecommendationSystem.sln  MealRecommendationSystem.vcxproj  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SmartMealSystem.sln  TASK_COMPLETION_SUMMARY.md  USAGE_GUIDE.md  USER_GUIDE.md  auto_encoding_setup.sh  build.bat  build.sh  deploy_windows.bat  docker-compose.yml  fix_encoding.py  fix_encoding_env.sh  fix_msvc_errors.py  run.bat  run_docker.sh  run_with_encoding.sh  set_encoding.sh  test_basic.sh  test_build  专业系统能力实训报告-第X组.docx  中文乱码解决方案.md  交付说明.txt  课程说明.pptx  题目（允许自拟题目）.docx
MealRecommenderBackend/: MealRecommenderBackend.vcxproj  MealRecommenderBackend.vcxproj.filters  MealSystem.h  foods.txt  main.cpp  users.txt
docs/: README.md  VS2022编译说明.md  专业系统能力实训报告-第7组-完整版.md  开发文档.md  文档生成完成报告.md  生成文档说明.md  用户使用手册.md  第1章-需求分析.md  第2章-系统设计.md  第3章-系统实现.md  第5章-部署.md  第6章-软件系统维护与支持.md  第7章-硬件系统维护.md  系统设计文档.md
include/: Database.h  Food.h  Meal.h  RecommendationEngine.h  User.h  Utils.h  WebServer.h
resources/: version.rc
src/: Database.cpp  Food.cpp  Meal.cpp  RecommendationEngine.cpp  User.cpp  Utils.cpp  WebServer.cpp  WebServer.h  index.html  main.cpp
www/: app.js  style.css
